# deployment-tool

./: .coveragerc  .gitignore  .pytest.ini  Dockerfile  Makefile  README.md  TESTING.md  changeLog  docker-entrypoint.sh  pyproject.toml
deployment/: __init__.py  build_image.py  colmena_deploy.py  zenoh_config.json5
scripts/: colmena_deploy.py
tests/: conftest.py  test_build_image.py  test_colmena_deploy.py  test_integration.py
tests/fixtures/: sample_service_description.json
